fix invalid src paths

--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Webpack Test</title>
 
-    <link rel="stylesheet" href="assets/bundle.css">
+    <link rel="stylesheet" href="assets/css/bundle.css">
 </head>
 <body>
     <div id="app-mount"></div>
-    <script src="assets/bundle.js"></script>
+    <script src="assets/js/bundle.js"></script>
 </body>
 </html>
